refactor: organize user oral status and fix contents/test flows